        - added -T (--selftest), to prevent recursive testing loops when 
          testing this distribution
        - POD updates
        - stderr.bblog as well as cpanm build.log files are now aggregated into
          the FAIL log reports (closes #61 and #62)
        - added -T, --selftest, to avoid recursive testing of Test::BrewBuild
          with the BBDEV_TESTING env var set

1.04    2016-04-01
        - ensure FAIL files are created properly and test (closes #53)
        - fix issue where --on wasn't setting up the environment correctly
          (fixes #54)
        - on Unix, we catch if an installed version is attempting to be
          installed, instead of letting perlbrew handle it (closes #50)
        - prereq 'version' added to correctly get version info from pre 5.10
          (fixes #51)
        - renamed --version|-v to --install|-i
        - added --notest|-N, allows install/remove without running exec()
          (closes #49)
        - added --setup|-s, displays Windows and Unix test platform setup guide
        - added --legacy|-L. Due to the fact ``cpanm'' requires 5.8.1, and we
          use it in the default exec plugin, we won't install versions lower
          than that, unless this flag is set
        - FAIL logs are now stored in a temp directory, then moved to './bblog'
          after completion, ensuring manifest.t tests don't fail (fixes #56)
        - fixed bug where on Windows, if a module build fails, the revdeps
          could still pass (fixes #57)
        - POD updates
        - created berrybrew PR dnmfarrell/brewberry#16 which added the --with
          arg to exec
        - bumped prereq of Test::BrewBuild::Plugin::TestAgainst to 0.05 due
          to the Windows path issues

1.03_03 2016-03-29
        - --revdep, auto-testing of CPAN down-river modules working very well
          (work on #39)
        - added t/dev-1xx tests, need perlbrew/berrybrew installed to run. Set