@@ -9,6 +9,7 @@ Revision history for Test-BrewBuild
           the FAIL log reports (closes #61 and #62)
         - added -T, --selftest, to avoid recursive testing of Test::BrewBuild
           with the BBDEV_TESTING env var set
+        - added _dzil_shim() and _dzil_unshim() for Dist::Zilla distributions
 
 1.04    2016-04-01
         - ensure FAIL files are created properly and test (closes #53)
